// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-sass > should add sass-loader 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core-canary/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<ROOT>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-sass > should add sass-loader and css-loader when injectStyles 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<ROOT>/packages/core/compiled/style-loader",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<ROOT>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-sass > should add sass-loader with excludes 1`] = `
[
  {
    "exclude": [
      /node_modules/,
    ],
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core-canary/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<ROOT>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sourceMap": true,
        },
      },
    ],
  },
]
`;
